Fri Jun  9 13:02:26 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/*.h pace/posix/*.inl,c

	  See config/types.h from previous ChangeLog. All these
	  types are altered in the source code. (ie: pthread_t
	  became pace_pthread_t).

	  perl -pi -e `s/pid_t/pace_pid_t/` *.h posix/*.inl posix/*.c

Fri Jun  9 12:20:23 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/config/types.h:

	  These are posix types in pace wrappers.
	  They are macro definitions. The actual types are not
	  available until the appropriate file is included.
	  Thus, I didn't put them into pace/sys/types.h.

	* pace/pace/defines.h

	  Added pace/config/types.h.

Thu Jun  8 15:10:24 2000  Joe Hoffert  <joeh@cs.wustl.edu>

	* pace/tests/{Makefile,Posix_SP_Test.c}:
          Added new test for POSIX_SINGLE_PROCESS unit of functionality
          and updated Makefile for changes to the PACE library directory
          structure.

Thu Jun  8 15:10:24 2000  Joe Hoffert  <joeh@cs.wustl.edu>

	* pace/pace/*.h:
	* pace/pace/arpa/*.h:
	* pace/pace/netinet/*.h:
	* pace/pace/sys/*.h:
          Modifying .h files to remove any path in front of .inl files. 

	* pace/pace/posix/*.c:
          Modifying .c files to remove any path in front of .inl files. 

	* pace/pace/posix/time.inl
          Changed PACE_SETERNNO to PACE_SET_ERRNO

Thu Jun  8 15:03:42 2000  Joe Hoffert  <joeh@cs.wustl.edu>

	* pace/pace/Makefile:
          Added support for PACE_SYSNAME to determine appropriate platform 
          subdirectory for VPATH and INCLDIRS.

Thu Jun  8 14:44:39 2000  Luther J Baker  <luther@cs.wustl.edu>

	* ../pace/linux/README
	* ../pace/linux
	* ../pace/sunos/README
	* ../pace/sunos
	* ../pace/emulation
	 
	  Removed from reposistory.

	* ../pace/linux/TODO

	  Moved to ../pace/posix/TODO

	* ../pace/pace.dsw

	  Moved to ../pace/win32/pace.dsw.
	  Hi Darrell. This takes all traces of win32 stuff out of
	  the main dir and although its slightly different than