@@ -1,5 +1,4 @@
-/*
- * $Id$
+/* $Id$
 
  * ============================================================================
  *
@@ -18,16 +17,24 @@
 #ifndef PACE_CONFIG_CONFIG_H
 #define PACE_CONFIG_CONFIG_H
 
+# define PACE_HAS_INLINE
+
 # if defined __EXTENSIONS__
-# define PACE_EXTENSIONS
+# define PACE_EXTENSIONS __EXTENSIONS__
 # endif
 
 # if defined _REENTRANT
+/* deprecated */
 # define PACE_HAS_REENTRANT
+/* current */
+# define PACE_REENTRANT _REENTRANT
 # endif
 
 # if defined _POSIX_PTHREAD_SEMANTICS
-# define PACE_HAS_POSIX_PTHREAD_SEMANTICS
+/* deprecated */
+# define PACE_HAS_POSIX_PTHREAD_SEMANTICS _POSIX_PTHREAD_SEMANTICS
+/* current */
+# define PACE_POSIX_PTHREAD_SEMANTICS _POSIX_PTHREAD_SEMANTICS
 # endif
 
 /* OS/PACE_mqueue.h */
